popup- Se agrega anotaciones para configurar campos por defecto para filtro y columnas cuando no sea configurados los campos por medio de la tarea dedicada a este trabajo, ademas de agregar nuevo campo custom para mostrar el valor de la seleccion de la informacion de los popups, ademas de agraegar nueva clase con constantes para fxml personalizados

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -16,3 +16,7 @@ generic.form.column.ParametroDTO.valor=Valor
 generic.form.column.ParametroDTO.valor2=Valor2
 generic.form.column.ParametroDTO.grupo=Grupo
 generic.window.popup.tittle.ParametroDTO=Selección de Parametros
+generic.ParametroDTO=Parametros
+popup-parametrized.error.clean-value=Opción clean value no implementada.
+popup-parametrized.error.open-popup=Opción popup open action no implementada.
+generic.error.NoRows=No se encontraron registros para %s.
