popup- Se encarga de cargar en las paginas de banco y empresa la mejora de los popup genericos de seleccion

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -17,6 +17,10 @@ generic.form.column.ParametroDTO.valor2=Valor2
 generic.form.column.ParametroDTO.grupo=Grupo
 generic.window.popup.tittle.ParametroDTO=Selección de Parametros
 generic.ParametroDTO=Parametros
+generic.window.popup.tittle.CentroCostoDto=Selección un Centro de Costo
+generic.CentroCostoDTO=Centro de Costos
 popup-parametrized.error.clean-value=Opción clean value no implementada.
 popup-parametrized.error.open-popup=Opción popup open action no implementada.
 generic.error.NoRows=No se encontraron registros para %s.
+languages.key.not-found=No se encontró el %s buscado.
+generic.field.assign.empty=El campo %s se encuentra vacio para el popup %s.
