popup- Se realiza ajuste en varias pantallas cambiando por el popup parametrizable para que tengan una mejor usabilidad.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -18,6 +18,10 @@ generic.form.column.ParametroDTO.grupo=Grupo
 generic.window.popup.tittle.ParametroDTO=Selección de Parametros
 generic.ParametroDTO=Parametros
 generic.window.popup.tittle.CentroCostoDto=Selección un Centro de Costo
+generic.EmpresaDTO=Empresa
+generic.window.popup.tittle.EmpresaDto=Selección de empresa
+generic.CuentaContableDTO=Cuenta contable
+generic.window.popup.tittle.CuentaContableDTO=Selección una cuenta contable
 generic.CentroCostoDTO=Centro de Costos
 popup-parametrized.error.clean-value=Opción clean value no implementada.
 popup-parametrized.error.open-popup=Opción popup open action no implementada.
