DBH2 Se reaia ajuste agregandole lenguage internacionalizacion y se crea nuevo servicio generico para realizar las consultas, para que

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -28,3 +28,21 @@ popup-parametrized.error.open-popup=Opción popup open action no implementada.
 generic.error.NoRows=No se encontraron registros para %s.
 languages.key.not-found=No se encontró el %s buscado.
 generic.field.assign.empty=El campo %s se encuentra vacio para el popup %s.
+service.error.query.search=Error en la búsqueda
+service.error.query.create.table=Error en la creación de la tabla
+service.error.query.create.trigger=Error en la creación del trigger
+service.error.query.drop.table=Error en la eliminación de la tabla
+service.error.query.insert.update=Error en el ingreso/actualización de un registro
+service.error.query.delete.row=Error en la eliminación del registro
+service.error.query.count.rows=Error en obtener las filas encontradas con la información suministrada
+service.error.query.launcher=Error en la ejecución del SQL
+service.error.query.exec.delete=Error en la ejecución de la eliminación
+service.error.query.exec=Error en la ejeución
+service.error.query.create.trigger.without.action=Error en la creación del trigger ya que no tiene acción
+service.error.query.create.trigger.without.option=Error en la creación del trigger ya qye no tiene opción
+service.error.query.create.trigger.without.table=Error en la creación del trigger ya que no tiene tabla
+service.error.query.not.found.row=No se encontraron registros
+service.error.query.found.rows=Se encontraron %d registros
+generic.service.empty.dto=El dto suministrado se encuentra vacio
+generic.service.code.empty.dto=El código del dto se encuentra vacio
+
