DBH2 Se realiza ajuste de codigo

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -1,6 +1,24 @@
+fxml.lbl.account_type=Tipo Cuenta
+fxml.lbl.account_code=Código Cuenta
+fxml.lbl.accounting_plan_type=Tipo Plan contable
+fxml.lbl.add=Agregar
+fxml.lbl.asociado=Asociado
+fxml.lbl.cancel=Cancelar
+fxml.lbl.code=Código
+fxml.lbl.delete=Eliminar
+fxml.lbl.enterprise=Empresa
+fxml.lbl.save=Guardar
+fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
+fxml.lbl.list_accounting_plan=Lista Plan Contable
+fxml.lbl.modify=Modificar
+fxml.lbl.naturaleza=Naturaleza
+fxml.lbl.name=Nombre
+fxml.lbl.search=Buscar
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
+generic.filter.lbl.CuentaContableDTO.codigoCuenta=Código Cuenta
+generic.filter.lbl.CuentaContableDTO.nombre=Nombre
 generic.filter.lbl.ParametroDTO.descripcion=Descripción
 generic.filter.lbl.ParametroDTO.estado=Estado
 generic.filter.lbl.ParametroDTO.orden=Orden
@@ -8,6 +26,8 @@ generic.filter.lbl.ParametroDTO.nombre=Nombre
 generic.filter.lbl.ParametroDTO.valor=Valor
 generic.filter.lbl.ParametroDTO.valor2=Valor2
 generic.filter.lbl.ParametroDTO.grupo=Grupo
+generic.form.column.CuentaContableDTO.codigoCuenta=Código Cuenta
+generic.form.column.CuentaContableDTO.nombre=Nombre
 generic.form.column.ParametroDTO.descripcion=Descripción
 generic.form.column.ParametroDTO.estado=Estado
 generic.form.column.ParametroDTO.orden=Orden
