DBH2 Se realiza ajuste de menus para que sean configurados por medio de archivo de propiedades y con i18n para crear el menu dinamicamente.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -65,4 +65,28 @@ service.error.query.not.found.row=No se encontraron registros
 service.error.query.found.rows=Se encontraron %d registros
 generic.service.empty.dto=El dto suministrado se encuentra vacio
 generic.service.code.empty.dto=El código del dto se encuentra vacio
-
+lbl.menu.Acciones=Acciones 
+lbl.menu.ActividadIca= Actividad Ica
+lbl.menu.Administrador=Administración
+lbl.menu.Bancos=Ingreso Bancos
+lbl.menu.CentroCosto=Centor de Costo
+lbl.menu.Concepto=Conceptos
+lbl.menu.Configuracion=Configuración
+lbl.menu.CuentaContable=Cuenta Contable
+lbl.menu.Cerrar=Cerrar 
+lbl.menu.DocumentoDinamico=Documentos Dimámicos 
+lbl.menu.Documentos=Documentos
+lbl.menu.Empresas=Empresas
+lbl.menu.General=General
+lbl.menu.Generales= Generales
+lbl.menu.Ingresos=Ingresos 
+lbl.menu.Inicio=Inicio 
+lbl.menu.Inventario=Inventario 
+lbl.menu.Inventarios=Inventarios 
+lbl.menu.ListConfigMarkServ=Configuración de Servicios con Marcadores  
+lbl.menu.Parametros=Parametros 
+lbl.menu.Personas=Personas
+lbl.menu.Productos=Productos 
+lbl.menu.ServiciosOfertados=Servicios Ofertados 
+lbl.menu.Trabajadores=Trabajadores 
+lbl.menu.Vehiculos=Vehiculos 
