DBH2 Se realiza ajuste para mostrar la pantalla de configuuracion dinamica para filtros y columnas ademas.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -2,18 +2,28 @@ fxml.lbl.account_type=Tipo Cuenta
 fxml.lbl.account_code=Código Cuenta
 fxml.lbl.accounting_plan_type=Tipo Plan contable
 fxml.lbl.add=Agregar
+fxml.lbl.alias=Alias
 fxml.lbl.asociado=Asociado
 fxml.lbl.cancel=Cancelar
+fxml.lbl.bean.class=Clase Bean
+fxml.lbl.character.number=# Caracteres
 fxml.lbl.code=Código
 fxml.lbl.delete=Eliminar
+fxml.lbl.description=Descripción
+fxml.lbl.dto.class=Clase DTO
 fxml.lbl.enterprise=Empresa
-fxml.lbl.save=Guardar
+fxml.lbl.generic.interfaces=Interfaces Genéricas
+fxml.lbl.is.filter=Es Filtro
+fxml.lbl.is.column=Es Column
+fxml.lbl.is.required=Es Requerido
 fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
 fxml.lbl.list_accounting_plan=Lista Plan Contable
-fxml.lbl.modify=Modificar
-fxml.lbl.naturaleza=Naturaleza
 fxml.lbl.name=Nombre
+fxml.lbl.naturaleza=Naturaleza
+fxml.lbl.modify=Modificar
+fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
+fxml.lbl.state=Estado
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
