DBH2 Se relaiza ajuste para manejo de filtros, columnas y campos dinamicos.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -21,9 +21,14 @@ fxml.lbl.list_accounting_plan=Lista Plan Contable
 fxml.lbl.name=Nombre
 fxml.lbl.naturaleza=Naturaleza
 fxml.lbl.modify=Modificar
+fxml.lbl.order=Orden
 fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
+fxml.form.button.add=Agregar
+fxml.form.button.delete=Eliminar
+fxml.form.button.edit=Modificar
+fxml.form.button.copy=Copiar
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
