DBH2 Se realiza ajueste para que se puedan configruar formularios complemteamente ademas agregando para los campos del formulario.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -16,6 +16,7 @@ fxml.lbl.generic.interfaces=Interfaces Genéricas
 fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.column=Es Column
 fxml.lbl.is.required=Es Requerido
+fxml.lbl.languages=Lenguaje
 fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
 fxml.lbl.list_accounting_plan=Lista Plan Contable
 fxml.lbl.name=Nombre
@@ -26,6 +27,7 @@ fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
 fxml.form.button.add=Agregar
+fxml.form.button.cancel=Cancelar
 fxml.form.button.delete=Eliminar
 fxml.form.button.edit=Modificar
 fxml.form.button.copy=Copiar
