DBH2 Se realiza ajsute para el funcionamiento correcto de las pantalals genericas, se pone el dataTable dentro del bean generico para no crearlo en cada pantalla y se agrgea metodo filtro para que se a aplicado a ese datamodel

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -28,9 +28,10 @@ fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
 fxml.form.button.add=Agregar
 fxml.form.button.cancel=Cancelar
+fxml.form.button.copy=Copiar
 fxml.form.button.delete=Eliminar
 fxml.form.button.edit=Modificar
-fxml.form.button.copy=Copiar
+fxml.form.button.new=Nuevo
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
