DBH2 se crean los desarrollos para las tareas faltantes de menus,ayudas,grupos,permisos,usuarios.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -13,19 +13,25 @@ fxml.lbl.description=Descripción
 fxml.lbl.dto.class=Clase DTO
 fxml.lbl.enterprise=Empresa
 fxml.lbl.generic.interfaces=Interfaces Genéricas
+fxml.lbl.group.users=Grupo para Usuarios
+fxml.lbl.help=Ayuda
 fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.column=Es Column
 fxml.lbl.is.required=Es Requerido
 fxml.lbl.languages=Lenguaje
 fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
 fxml.lbl.list_accounting_plan=Lista Plan Contable
+fxml.lbl.menu.permision.user=Permisos para Permiso/Usuario 
+fxml.lbl.menus=Menus
 fxml.lbl.name=Nombre
 fxml.lbl.naturaleza=Naturaleza
 fxml.lbl.modify=Modificar
 fxml.lbl.order=Orden
+fxml.lbl.permission=Permisos
 fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
+fxml.lbl.users=Usuarios
 fxml.form.button.add=Agregar
 fxml.form.button.cancel=Cancelar
 fxml.form.button.copy=Copiar
