DBH2 Se realiza ajuste para agregar la pantalla de login al inicio de la aplicación.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -32,12 +32,17 @@ fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
 fxml.lbl.users=Usuarios
+fxml.form.lbl.user=Usuario
+fxml.form.lbl.password=Contraseña
+fxml.form.lbl.remember=Recordar
 fxml.form.button.add=Agregar
 fxml.form.button.cancel=Cancelar
 fxml.form.button.copy=Copiar
 fxml.form.button.delete=Eliminar
 fxml.form.button.edit=Modificar
 fxml.form.button.new=Nuevo
+fxml.form.button.connect=Conectar
+fxml.form.button.clear.all=Limpiar
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
