DBH3 Se realiza ajustes para mostrar informacion de objetos de parametros dentro del popup ya que fue modificado, pero aun no se al logrado hacer funcionar correctemnte.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -1,3 +1,5 @@
+fxml.btn.clean=Limpiar
+fxml.btn.update=Actualizar
 fxml.lbl.account_type=Tipo Cuenta
 fxml.lbl.account_code=Código Cuenta
 fxml.lbl.accounting_plan_type=Tipo Plan contable
