DBH3 Se realiza ajustes de mensajes y neuvos campos para documentos dinamicos

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language.properties
@@ -5,5 +5,5 @@ excepcion.checked.querys.popup.not.submision.register.count=No se suministro la 
 excepcion.checked.querys.popup.count.register.cant0=La cantidad de registros no puede ser 0.
 excepcion.checked.querys.popup.value.register.init.cant.less0=El valor de registro inicial no puede ser meno a 0
 excepcion.checked.querys.popup.count.cant.less0=La cantidad no puede ser menor a 0
-
+exception.nullpointer.login=Usuario o contraseña es incorrecta.
 excepcion.checked.Services=Error al obtener el servicio {0} cuando se usa la clase {1} 
