--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -1,4 +1,8 @@
+form.lbl.msn.error.user=Campo usuario vacío.
+form.lbl.msn.error.password=Campo contraseña vacía.
+form.title.login=Inicio de Sesión
 fxml.btn.clean=Limpiar
+fxml.btn.search=Buscar
 fxml.btn.update=Actualizar
 fxml.lbl.account_type=Tipo Cuenta
 fxml.lbl.account_code=Código Cuenta
