load i18n lack Se crea nuevo metodo para crear popup apartir de una interfaz ya creada, con esto se pretende que se pueda hacer click sobre un etiqueta y esta nos muestre la ventana de ingreso de nuevo lenguage lleno en el campo de código con el valor de la etiqueta que no se encontró, con esto se realiza el trabajo de ingreso de etiquetas sin traducción facilmente.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -37,6 +37,9 @@ fxml.lbl.permission=Permisos
 fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
+fxml.lbl.title.list.languages=Idiomas
+fxml.lbl.title.list.group.users=Grupos de usuarios
+fxml.lbl.title.generic.interface=Interfaces Genéricas
 fxml.lbl.users=Usuarios
 fxml.form.lbl.user=Usuario
 fxml.form.lbl.password=Contraseña
@@ -78,6 +81,7 @@ generic.window.popup.tittle.EmpresaDto=Selección de empresa
 generic.CuentaContableDTO=Cuenta contable
 generic.window.popup.tittle.CuentaContableDTO=Selección una cuenta contable
 generic.CentroCostoDTO=Centro de Costos
+msn.error.field.empty=Campo Vacío
 popup-parametrized.error.clean-value=Opción clean value no implementada.
 popup-parametrized.error.open-popup=Opción popup open action no implementada.
 generic.error.NoRows=No se encontraron registros para %s.
@@ -106,22 +110,35 @@ lbl.menu.Administrador=Administración
 lbl.menu.Bancos=Ingreso Bancos
 lbl.menu.CentroCosto=Centor de Costo
 lbl.menu.Concepto=Conceptos
-lbl.menu.Configuracion=Configuración
+lbl.menu.Configuration=Configuración
 lbl.menu.CuentaContable=Cuenta Contable
 lbl.menu.Cerrar=Cerrar 
 lbl.menu.DocumentoDinamico=Documentos Dimámicos 
 lbl.menu.Documentos=Documentos
+lbl.menu.DocumentoXPagar?=Documentos por pagar
+lbl.menu.DocumentoXCobrar?=Documentos por cobrar
 lbl.menu.Empresas=Empresas
+lbl.menu.Factura?=Factura
 lbl.menu.General=General
 lbl.menu.Generales= Generales
+lbl.menu.GroupUsers=Grupo de Usuarios
+lbl.menu.Helps=Ayudas
 lbl.menu.Ingresos=Ingresos 
 lbl.menu.Inicio=Inicio 
 lbl.menu.Inventario=Inventario 
-lbl.menu.Inventarios=Inventarios 
-lbl.menu.ListConfigMarkServ=Configuración de Servicios con Marcadores  
-lbl.menu.Parametros=Parametros 
+lbl.menu.Inventarios=Inventarios
+lbl.menu.Languages=Idiomas 
+lbl.menu.ListConfigMarkServ=Configuración de Servicios con Marcadores
+lbl.menu.ListGenericInterfaces=Interfaces Genericas
+lbl.menu.Logout=Cerrar Sesión  
+lbl.menu.Menus=Menus
+lbl.menu.MenuPermissionUsers=Permisos de usuario sobre menus
+lbl.menu.Parametros=Parametros
+lbl.menu.Permissions=Permisos 
 lbl.menu.Personas=Personas
 lbl.menu.Productos=Productos 
-lbl.menu.ServiciosOfertados=Servicios Ofertados 
+lbl.menu.ServiciosOfertados=Servicios Ofertados
+lbl.menu.system=Sistema 
 lbl.menu.Trabajadores=Trabajadores 
+lbl.menu.Users=Usuarios
 lbl.menu.Vehiculos=Vehiculos 
