load i18n lack Se agrega tarea de cache para poder realizar que limpie el cache cuando se recarga el segmento de código.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -11,6 +11,7 @@ fxml.lbl.add=Agregar
 fxml.lbl.alias=Alias
 fxml.lbl.asociado=Asociado
 fxml.lbl.cancel=Cancelar
+fxml.lbl.clean=Limpiar
 fxml.lbl.bean.class=Clase Bean
 fxml.lbl.character.number=# Caracteres
 fxml.lbl.code=Código
@@ -34,6 +35,8 @@ fxml.lbl.naturaleza=Naturaleza
 fxml.lbl.modify=Modificar
 fxml.lbl.order=Orden
 fxml.lbl.permission=Permisos
+fxml.lbl.name=Nombre
+fxml.lbl.state=Estado
 fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
@@ -82,6 +85,7 @@ generic.CuentaContableDTO=Cuenta contable
 generic.window.popup.tittle.CuentaContableDTO=Selección una cuenta contable
 generic.CentroCostoDTO=Centro de Costos
 msn.error.field.empty=Campo Vacío
+page.tittle.cached=Cache
 popup-parametrized.error.clean-value=Opción clean value no implementada.
 popup-parametrized.error.open-popup=Opción popup open action no implementada.
 generic.error.NoRows=No se encontraron registros para %s.
@@ -142,3 +146,5 @@ lbl.menu.system=Sistema
 lbl.menu.Trabajadores=Trabajadores 
 lbl.menu.Users=Usuarios
 lbl.menu.Vehiculos=Vehiculos 
+message.value.active=Activo
+message.value.inactive=Inactivo
