load i18n lack Se realiza ajuste para manejar los toggles(Se remplaza el codigo de refresh anterior) y ademas se se agregan languages faltantes.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -11,6 +11,7 @@ fxml.lbl.add=Agregar
 fxml.lbl.alias=Alias
 fxml.lbl.asociado=Asociado
 fxml.lbl.cancel=Cancelar
+fxml.lbl.update=Actualizar
 fxml.lbl.clean=Limpiar
 fxml.lbl.bean.class=Clase Bean
 fxml.lbl.character.number=# Caracteres
@@ -26,6 +27,7 @@ fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.column=Es Column
 fxml.lbl.is.required=Es Requerido
 fxml.lbl.languages=Lenguaje
+fxml.lbl.last.update=Última Actualización
 fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
 fxml.lbl.list_accounting_plan=Lista Plan Contable
 fxml.lbl.menu.permision.user=Permisos para Permiso/Usuario 
