load i18n lack Se agregan nuevos campos a la configuracion de campos dinamicos, campos para defautl,visible, group y campo a mostrar

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -20,6 +20,7 @@ fxml.lbl.delete=Eliminar
 fxml.lbl.description=Descripción
 fxml.lbl.dto.class=Clase DTO
 fxml.lbl.enterprise=Empresa
+fxml.lbl.field=Campo
 fxml.lbl.generic.interfaces=Interfaces Genéricas
 fxml.lbl.group.users=Grupo para Usuarios
 fxml.lbl.help=Ayuda
