load i18n lack Se realiza ajuste de la pantalla de usuarios para ver usuarios actualizar y crear nuevos registros.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -17,16 +17,20 @@ fxml.lbl.bean.class=Clase Bean
 fxml.lbl.character.number=# Caracteres
 fxml.lbl.code=Código
 fxml.lbl.delete=Eliminar
+fxml.lbl.default=Por Defecto
 fxml.lbl.description=Descripción
 fxml.lbl.dto.class=Clase DTO
 fxml.lbl.enterprise=Empresa
 fxml.lbl.field=Campo
 fxml.lbl.generic.interfaces=Interfaces Genéricas
+fxml.lbl.group=Grupo
 fxml.lbl.group.users=Grupo para Usuarios
 fxml.lbl.help=Ayuda
 fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.column=Es Column
+fxml.lbl.is.default=Es por defecto
 fxml.lbl.is.required=Es Requerido
+fxml.lbl.is.visible=Es Visible
 fxml.lbl.languages=Lenguaje
 fxml.lbl.last.update=Última Actualización
 fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
