load i18n lack Se realiza ajuste de pantalla de creacion de genericos para agregar que se puedan configurar grupos para valores traidos de parametros y que se pongan en el campo especificado.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -29,6 +29,7 @@ fxml.lbl.help=Ayuda
 fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.column=Es Column
 fxml.lbl.is.default=Es por defecto
+fxml.lbl.is.group=Maneja Grupo
 fxml.lbl.is.required=Es Requerido
 fxml.lbl.is.visible=Es Visible
 fxml.lbl.languages=Lenguaje
