--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -4,6 +4,8 @@ form.title.login=Inicio de Sesión
 fxml.btn.clean=Limpiar
 fxml.btn.search=Buscar
 fxml.btn.update=Actualizar
+fxml.btn.accept=Aceptar
+fxml.btn.cancel=Cancelar
 fxml.lbl.account_type=Tipo Cuenta
 fxml.lbl.account_code=Código Cuenta
 fxml.lbl.accounting_plan_type=Tipo Plan contable
@@ -61,6 +63,7 @@ fxml.form.button.copy=Copiar
 fxml.form.button.delete=Eliminar
 fxml.form.button.edit=Modificar
 fxml.form.button.new=Nuevo
+fxml.form.button.newreg
 fxml.form.button.connect=Conectar
 fxml.form.button.clear.all=Limpiar
 generic.form.btn.save=Guardar
