--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -3,7 +3,10 @@ form.lbl.msn.error.password=Campo contraseña vacía.
 form.title.login=Inicio de Sesión
 fxml.btn.clean=Limpiar
 fxml.btn.search=Buscar
+fxml.btn.create=Crear
+fxml.btn.delete=Eliminar
 fxml.btn.update=Actualizar
+fxml.btn.save=Guardar
 fxml.btn.accept=Aceptar
 fxml.btn.cancel=Cancelar
 fxml.lbl.account_type=Tipo Cuenta
