feature / button api fluid Ajustes realizados a base de la migracion a botones dinamicos y todas las tareas dinamicas.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -69,6 +69,7 @@ fxml.form.button.new=Nuevo
 fxml.form.button.newreg
 fxml.form.button.connect=Conectar
 fxml.form.button.clear.all=Limpiar
+fxml.form.document.type=Tipo de Documento
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
