button api fluid Se realzia ajuste de pantalla de campos genericos por problemas de mal funcionamiento con campos seleccionables y se ajustan los botones del login con los botones y se agregan iconos y se ajusta el tamaño de la ventana.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -163,3 +163,5 @@ lbl.menu.Users=Usuarios
 lbl.menu.Vehiculos=Vehiculos 
 message.value.active=Activo
 message.value.inactive=Inactivo
+inputtext.promp.usuario.user.name=Ingrese nombre usuario
+inputtext.promp.usuario.password=Ingrese constraseña
