button api fluid Se realiza ajuste agregando campos faltantes en las diferentes ventanas, y ajuestes sobre la api de botones, dejando toda la configuracion correctamente.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -1,6 +1,7 @@
 form.lbl.msn.error.user=Campo usuario vacío.
 form.lbl.msn.error.password=Campo contraseña vacía.
 form.title.login=Inicio de Sesión
+fxml.title.person=Persona
 fxml.btn.clean=Limpiar
 fxml.btn.search=Buscar
 fxml.btn.create=Crear
