aplicando contabilidad Se realiza el ajuste para poner el funcionamiento de compiar la factura a una factura por pagar.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -166,3 +166,5 @@ message.value.active=Activo
 message.value.inactive=Inactivo
 inputtext.promp.usuario.user.name=Ingrese nombre usuario
 inputtext.promp.usuario.password=Ingrese constraseña
+err.svc.documents.user.empty=El usuario se encuentra vacío.
+err.svc.documents.dto.code.empty=El objeto {0} no tiene un código valido.
