aplicando contabilidad Se realiza ajuste para tener un listado de los languages no encontrados, ademas de la funcionalidad de la tarea de documentos y que se pueda copiar la configuracion de los campos dinamicos de documentos.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -10,6 +10,8 @@ fxml.btn.update=Actualizar
 fxml.btn.save=Guardar
 fxml.btn.accept=Aceptar
 fxml.btn.cancel=Cancelar
+fxml.btn.copy=Copiar
+fxml.lbl.copy.to=Copiar a
 fxml.lbl.account_type=Tipo Cuenta
 fxml.lbl.account_code=Código Cuenta
 fxml.lbl.accounting_plan_type=Tipo Plan contable
