aplicando contabilidad Se realiza mejoras en la forma de realizar busquedas, ademas de se agrega funcionalidad a recibir el pago, y se termina la funcionallidad de generar recordatorios.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -170,3 +170,19 @@ inputtext.promp.usuario.user.name=Ingrese nombre usuario
 inputtext.promp.usuario.password=Ingrese constraseña
 err.svc.documents.user.empty=El usuario se encuentra vacío.
 err.svc.documents.dto.code.empty=El objeto {0} no tiene un código valido.
+err.svc.accounting.partialpay.not.update=No se logro actualizar el monto parcial pagado en la cuota
+err.svc.accounting.getStatePay.not.found=No se encontro el estado {0} dentro del grupo {1}
+err.svc.accounting.payed.not.found=No se logro actualizar el monto pagado en la cuota
+svc.querygdbsvc.order=Se presento un error en la ordenación del resultado
+err.svc.accounting.loadpayed.invalid.option.pay=Opción inválida en el procesamiento del pago
+err.svc.accounting.getdocumenttype.not.found=No se encontro el tipo de documento {0} asociado al grupo {0}
+err.svc.accounting.cashbank.not.inserted=No se logro agregar un registro a la caja mayor
+err.svc.accounting.cashdesk.not.inserted=No se logro agregar un registro a la caja menor
+err.svc.accounting.cashbank.query=Se presento un error con una de los querys ejecutados para ingresar valor a caja mayor
+err.svc.accounting.loadpayed.query=Se presento un error con uno de los querys ejecutados en el proceso de pago
+err.svc.accounting.cashdesk.query=Se presento un error con una de las querys ejecutadas para ingresar valor a caja menor
+err.svc.accounting.totalpay.not.update=Se presento un error con la actualizacion de una cuota con el siguiente codigo {0} con valor pagado {1} y valor impuesto {2}
+err.svc.accounting.loadpayed.pago.not.insert=No se logró ingresar el pago
+err.svc.queryGDBSvc.different=Se presento un error con  {0} != {1}
+err.svc.remain.getstate.not.found=No se encontró el estado {0}
+err.svc.remain.getstate.parameter=No se logro encontrar el estado {0} del parametro {1}
