aplicando contabilidad Se realiza creacion del servicio para genear las cuotas

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -186,3 +186,12 @@ err.svc.accounting.loadpayed.pago.not.insert=No se logró ingresar el pago
 err.svc.queryGDBSvc.different=Se presento un error con  {0} != {1}
 err.svc.remain.getstate.not.found=No se encontró el estado {0}
 err.svc.remain.getstate.parameter=No se logro encontrar el estado {0} del parametro {1}
+err.svc.accounting.generatequotes.users.not.send=No se suministro el usuario
+err.svc.accounting.generatequotes.numberquotes.invalid=Número de cuotas invalidas
+err.svc.accounting.generatequotes.initdate.empty=La fecha inicial se encuentra vacia
+err.svc.accounting.generatequotes.period.invalid=La perioricidad es invalida
+err.svc.accounting.generatequotes.document.invalid=El documento suministrado es invalido
+err.svc.accounting.generatequotes.insertquote=Se presento un error al guardar la cuota {0}
+err.svc.accounting.generatequotes.insertsquote=Se presento un error al guardar alguna cuota {0}
+err.svc.accounting.generatequotes.percent.max.invalid=Se pesento un error al verificar el valor maximo del porcentage supera el 100% el valor es {0}
+err.svc.accounting.generatequotes.insertgeneratequote=Se presento un error al ingresar el registro de generacion de cuotas.
