aplicando contabiulidad Se realiza creacion de nuevas implementaciones para cuotas 0y generacion de cuotas, falta crear boton para ver las cuotas, se plante amigracion a la api fluida de botones.

--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -31,6 +31,7 @@ fxml.lbl.dto.class=Clase DTO
 fxml.lbl.enterprise=Empresa
 fxml.lbl.field=Campo
 fxml.lbl.generic.interfaces=Interfaces Genéricas
+fxml.lbl.generate.quote=Generar Cuota
 fxml.lbl.group=Grupo
 fxml.lbl.group.users=Grupo para Usuarios
 fxml.lbl.help=Ayuda
@@ -60,6 +61,7 @@ fxml.lbl.title.list.languages=Idiomas
 fxml.lbl.title.list.group.users=Grupos de usuarios
 fxml.lbl.title.generic.interface=Interfaces Genéricas
 fxml.lbl.users=Usuarios
+fxml.lbl.quote=Cuota
 fxml.form.lbl.user=Usuario
 fxml.form.lbl.password=Contraseña
 fxml.form.lbl.remember=Recordar
