--- a/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
+++ b/pyt-contabilidad/pyt-app/src/main/resources/languages/language_es.properties
@@ -22,6 +22,7 @@ fxml.lbl.cancel=Cancelar
 fxml.lbl.update=Actualizar
 fxml.lbl.clean=Limpiar
 fxml.lbl.bean.class=Clase Bean
+fxml.lbl.format=Formato
 fxml.lbl.character.number=# Caracteres
 fxml.lbl.code=Código
 fxml.lbl.delete=Eliminar
