--- a/ea-contabilidad/ea-app/src/main/resources/languages/language.properties
+++ b/ea-contabilidad/ea-app/src/main/resources/languages/language.properties
@@ -1,3 +1,4 @@
+fxml.table.column.position=Position
 excepcion.checked.querys.popup.not.submision.filter=No se suministro el filtro.
 excepcion.checked.querys.popup.not.submision.user=No se suministro el usuario 
 excepcion.checked.querys.popup.not.submision.register.init=No se suministro el registro inicial
