--- a/ea-contabilidad/ea-app/src/main/resources/languages/language_es.properties
+++ b/ea-contabilidad/ea-app/src/main/resources/languages/language_es.properties
@@ -32,31 +32,31 @@ fxml.lbl.generic.interfaces=Interfaces Genéricas
 fxml.lbl.group=Grupo
 fxml.lbl.group.users=Grupo para Usuarios
 fxml.lbl.help=Ayuda
-fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.column=Es Column
 fxml.lbl.is.default=Es por defecto
+fxml.lbl.is.filter=Es Filtro
 fxml.lbl.is.group=Maneja Grupo
 fxml.lbl.is.required=Es Requerido
 fxml.lbl.is.visible=Es Visible
 fxml.lbl.languages=Lenguaje
 fxml.lbl.last.update=Última Actualización
-fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
 fxml.lbl.list_accounting_plan=Lista Plan Contable
-fxml.lbl.menu.permision.user=Permisos para Permiso/Usuario 
+fxml.lbl.list_accounting_plan_type=Lista Tipo Plan Contable
 fxml.lbl.menus=Menus
+fxml.lbl.menu.permision.user=Permisos para Permiso/Usuario 
+fxml.lbl.modify=Modificar
+fxml.lbl.name=Nombre
 fxml.lbl.name=Nombre
 fxml.lbl.naturaleza=Naturaleza
-fxml.lbl.modify=Modificar
 fxml.lbl.order=Orden
 fxml.lbl.permission=Permisos
-fxml.lbl.name=Nombre
-fxml.lbl.state=Estado
+fxml.lbl.position=Posición
 fxml.lbl.save=Guardar
 fxml.lbl.search=Buscar
 fxml.lbl.state=Estado
+fxml.lbl.title.generic.interface=Interfaces Genéricas
 fxml.lbl.title.list.languages=Idiomas
 fxml.lbl.title.list.group.users=Grupos de usuarios
-fxml.lbl.title.generic.interface=Interfaces Genéricas
 fxml.lbl.users=Usuarios
 fxml.form.lbl.user=Usuario
 fxml.form.lbl.password=Contraseña
@@ -71,6 +71,7 @@ fxml.form.button.newreg
 fxml.form.button.connect=Conectar
 fxml.form.button.clear.all=Limpiar
 fxml.form.document.type=Tipo de Documento
+fxml.table.column.position=Posición
 generic.form.btn.save=Guardar
 generic.filter.btn.clean=Limpiar
 generic.filter.btn.search=Buscar
