--- a/ea-contabilidad/ea-app/src/main/resources/languages/language_es.properties
+++ b/ea-contabilidad/ea-app/src/main/resources/languages/language_es.properties
@@ -2,14 +2,15 @@ form.lbl.msn.error.user=Campo usuario vacío.
 form.lbl.msn.error.password=Campo contraseña vacía.
 form.title.login=Inicio de Sesión
 fxml.title.person=Persona
-fxml.btn.clean=Limpiar
-fxml.btn.search=Buscar
-fxml.btn.create=Crear
-fxml.btn.delete=Eliminar
-fxml.btn.update=Actualizar
-fxml.btn.save=Guardar
 fxml.btn.accept=Aceptar
 fxml.btn.cancel=Cancelar
+fxml.btn.clean=Limpiar
+fxml.btn.copy=Copiar
+fxml.btn.create=Crear
+fxml.btn.delete=Eliminar
+fxml.btn.save=Guardar
+fxml.btn.search=Buscar
+fxml.btn.update=Actualizar
 fxml.lbl.account_type=Tipo Cuenta
 fxml.lbl.account_code=Código Cuenta
 fxml.lbl.accounting_plan_type=Tipo Plan contable
@@ -22,6 +23,7 @@ fxml.lbl.clean=Limpiar
 fxml.lbl.bean.class=Clase Bean
 fxml.lbl.character.number=# Caracteres
 fxml.lbl.code=Código
+fxml.lbl.copy.to=Copiar a
 fxml.lbl.delete=Eliminar
 fxml.lbl.default=Por Defecto
 fxml.lbl.description=Descripción
