--- a/ea-contabilidad/ea-app/src/main/resources/languages/language.properties
+++ b/ea-contabilidad/ea-app/src/main/resources/languages/language.properties
@@ -1,4 +1,5 @@
-fxml.btn.copy=Copiar
+fxml.btn.copy=Copy
+fxml.lbl.format=Format
 fxml.lbl.copy.to=Copy To
 fxml.table.column.position=Position
 excepcion.checked.querys.popup.not.submision.filter=No se suministro el filtro.
