--- a/ea-contabilidad/ea-app/src/main/resources/languages/language_es.properties
+++ b/ea-contabilidad/ea-app/src/main/resources/languages/language_es.properties
@@ -18,6 +18,7 @@ fxml.lbl.add=Agregar
 fxml.lbl.alias=Alias
 fxml.lbl.asociado=Asociado
 fxml.lbl.cancel=Cancelar
+fxml.lbl.format=Formato
 fxml.lbl.update=Actualizar
 fxml.lbl.clean=Limpiar
 fxml.lbl.bean.class=Clase Bean
